little clean up for generalization

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Inherit - CSS Radar version
+Theme Name: Inherit
 Theme URI: http://css.studiomohawk.com/
 Description: A theme framework for Studio Mohawk Design.
 Author: Studio Mohawk Design.
